# muDCN_v2

./: DEMO_INSTRUCTIONS.md  Makefile  README.md  demo.sh  directory_map.md  docker-compose.yml  install_docker.sh
archive/ml_phase4/: MANIFEST.txt  README.md
deployment/: Dockerfile.python  Dockerfile.rust
deployment/kubernetes/: prometheus.yaml  udcn-control-plane.yaml  udcn-transport.yaml
docker/benchmark/: README.md  analyze_metrics.py  generate_latex_summary.py  generate_plots.py  generate_publication_plots.py  summarize_results.py
docker/client/: Dockerfile
docker/server/: Dockerfile
docs/: arch_udcn_pipeline.tex  architecture.md
ebpf_ndn/: Dockerfile  Makefile  README.md
ebpf_xdp/: Makefile  monitor_xdp_stats.sh  ndn_parser.c  ndn_parser_v2.c  ndn_parser_v2_proc.c  ndn_tlv.h  ndn_xdp_loader.c  ndn_xdp_loader_v2.c
k8s/: README.md  build_containers.sh  deploy_to_minikube.sh  deploy_udcn.sh  k8s_architecture.tex  setup_minikube.sh  udcn-autoscaling.yaml  udcn-chaos-tests.yaml  udcn-client-deployment.yaml  udcn-controller-deployment.yaml  udcn-grafana-dashboard.json  udcn-istio-integration.yaml  udcn-jaeger-tracing.yaml  udcn-monitoring.yaml  udcn-network-policies.yaml  udcn-services.yaml  udcn-simple-demo.yaml  udcn-transport-daemonset.yaml
ml_models/: mtu_predictor_wrapper.py
proto/: udcn.proto
python_client/: controller.py  test_client.py
python_control_plane/: config.yaml  generate_protos.py  requirements.txt  setup.py
quic_ndn_test/: Cargo.toml  build.rs
quic_ndn_test/proto/: ndn.proto
quic_ndn_test/src/: grpc_test.rs  main.rs
rust_ndn_transport/: Cargo.toml  Cargo.toml.compat  Cargo.toml.simple  Cargo.toml.wsl  README.md  build.rs
rust_ndn_transport/examples/: ml_mtu_demo.py  ml_mtu_prediction.py  mtu_xdp_integration.rs  python_demo.py  quic_client.rs  quic_server.rs  quic_test.rs  simple_quic_test.rs  test_ml_prediction.py
rust_ndn_transport/proto/: udcn.proto
rust_ndn_transport/results/decision_tree/: results_20250515-013916.json
rust_ndn_transport/results/ensemble/: results_20250515-013917.json
rust_ndn_transport/results/rule_based/: results_20250515-013916.json
rust_ndn_transport/src/: cache.rs  cache.rs.fixed  error.rs  fragmentation.rs  grpc.rs  grpc_quic_integration.rs  grpc_quic_integration_enhanced.rs  interest_retry.rs  interface.rs  lib.rs  metrics.rs  metrics.rs.fixed  ml.rs  name.rs  ndn.rs  pipeline.rs  python.rs  quic.rs  quic.rs.bak  quic.rs.temp  quic_transport.rs  security.rs  xdp.rs
rust_ndn_transport/src/ml/: mod.rs  mtu_prediction.rs
rust_ndn_transport/src/tests/: fragmentation_tests.rs  mod.rs  python_binding_tests.rs  quic_tests.rs
rust_ndn_transport/tests/: cache_tests.rs  enhanced_quic_grpc_integration_test.rs  fragmentation_tests.rs  grpc_tests.rs  integration_tests.rs  name_tests.rs  ndn_tests.rs  quic_grpc_integration_test.rs  quic_integration_test.rs
testbed/: traffic_config.yaml  traffic_generator.py
(+61 files in other folders)
